fixed readingTime & link wraps
Hopefully fixed link wrap.

Reading time needs to be checked again.

--- a/styles/global.css
+++ b/styles/global.css
@@ -30,6 +30,24 @@ p {
 a {
     text-decoration: none;
     color: var(--accent-color);
+
+    .dont-break-out {
+        /* These are technically the same, but use both */
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+
+        -ms-word-break: break-all;
+        /* This is the dangerous one in WebKit, as it breaks things wherever */
+        word-break: break-all;
+        /* Instead use this non-standard one: */
+        word-break: break-word;
+
+        /* Adds a hyphen where the word breaks, if supported (No Blink) */
+        -ms-hyphens: auto;
+        -moz-hyphens: auto;
+        -webkit-hyphens: auto;
+        hyphens: auto;
+    }
 }
 
 main {
@@ -67,12 +85,13 @@ main {
     width: 65%;
 }
 
-@media (max-width : 850px) {
+@media (max-width: 850px) {
     html {
         font-size: 95%;
     }
 
-    .post-home, .post-page{
+    .post-home,
+    .post-page {
         width: 80%;
     }
 }
